<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_without_blur"
    android:paddingBottom="1dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="1dp">

    <ImageView
        android:id="@+id/imageviewi1"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:background="@drawable/logo_final"
        android:contentDescription="@string/image_content_description" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageviewi1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/emri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/safety"
            android:textColor="#FFFFFF"
            android:textSize="21pt" />

        <TextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/alert"
            android:textColor="#FFFFFF"
            android:textSize="21pt"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView

        android:id="@+id/butoniemri"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif"
        android:text="@string/discover_risks"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butoniemri"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/slogan"
        android:textColor="#FFFFFF"
        android:textSize="7pt" />

</RelativeLayout>