<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="safety.safetyalerts.fragments.DataChartsFragment">



    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="220dp"
        app:srcCompat="@drawable/chart1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image_content_description" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/landslides"
        android:textSize="24sp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="220dp"
        app:srcCompat="@drawable/chart2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image_content_description" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/landslides2" />
</RelativeLayout>
